--- a/src/Presentation/Nop.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Presentation/Nop.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -224,6 +224,15 @@
         </div>
         <div class="form-group row">
             <div class="col-md-3">
+                <nop-label asp-for="@Model.Locales[item].Author" />
+            </div>
+            <div class="col-md-9">
+                <nop-textarea asp-for="@Model.Locales[item].Author" />
+                <span asp-validation-for="@Model.Locales[item].Author"></span>
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-md-3">
                 <nop-label asp-for="@Model.Locales[item].FullDescription" />
             </div>
             <div class="col-md-9">
@@ -251,6 +260,15 @@
             <div class="col-md-9">
                 <nop-textarea asp-for="ShortDescription" />
                 <span asp-validation-for="ShortDescription"></span>
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-md-3">
+                <nop-label asp-for="@Model.Author" />
+            </div>
+            <div class="col-md-9">
+                <nop-textarea asp-for="@Model.Author" />
+                <span asp-validation-for="@Model.Author"></span>
             </div>
         </div>
         <div class="form-group row">
