--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Content/css/styles.css
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Content/css/styles.css
@@ -2117,6 +2117,12 @@ label, label + * {
   color: #666;
 }
 
+.overview .author {
+  margin: 0 0 25px;
+  line-height: 22px;
+  color: greenyellow;
+}
+
 .product-no-reviews,
 .product-reviews-overview {
   margin: 0 0 25px;
