--- a/src/Presentation/Nop.Web/Views/Product/ProductTemplate.Simple.cshtml
+++ b/src/Presentation/Nop.Web/Views/Product/ProductTemplate.Simple.cshtml
@@ -75,6 +75,12 @@
                                 @Html.Raw(Model.ShortDescription)
                             </div>
                         }
+                        @if (!string.IsNullOrEmpty(Model.Author))
+                        {
+                            <div class="author">
+                                @Html.Raw(Model.Author)
+                            </div>
+                        }
                         @await Component.InvokeAsync("Widget", new { widgetZone = PublicWidgetZones.ProductDetailsOverviewTop, additionalData = Model })
                         <!--product reviews-->
                         @await Html.PartialAsync("_ProductReviewOverview", Model.ProductReviewOverview)
