--- a/src/Presentation/Nop.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Presentation/Nop.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -245,6 +245,11 @@
     ,
     @<div>
         <div class="form-group row">
+            <div class="col-md-12">
+                @await Component.InvokeAsync("ProductDiscountAdmin")
+            </div>
+        </div>
+        <div class="form-group row">
             <div class="col-md-3">
                 <nop-label asp-for="Name" />
             </div>
